feat: add fixed asset lifecycle
